fixed contacts being overlapped by fab

--- a/web-client/src/pages/Home/Home.scss
+++ b/web-client/src/pages/Home/Home.scss
@@ -43,7 +43,7 @@
   }
 
   footer {
-    align-self: flex-start;
+    margin-bottom: 60px;
   }
 
   a {
